--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestoría Vehicular Chalco, Huixquilucan e Interlomas | Placas Edomex Sin Filas</title>
+    <title>Gestoría Vehicular EdoMex y CDMX | Placas Altas/Bajas, Cambio Propietario | Chalco, Ixtapaluca, Interlomas
+    </title>
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
     <link rel="alternate icon" href="assets/images/favicon.ico" type="image/x-icon" sizes="any">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description"
-        content="¿Auto Nuevo? Tramita tu Permiso de Guerrero 2026 y Licencia Permanente CDMX. Gestoría vehicular experta en Chalco, Huixquilucan e Interlomas. Foreigner Services available: Plates & Licenses for Foreigners.">
+        content="Gestoría Vehicular en Chalco, Ixtapaluca, Huixquilucan e Interlomas. Expertos en Placas (Altas/Bajas), Cambio de Propietario y Legalización. Trámites rápidos en CDMX y EdoMex.">
     <meta name="keywords"
-        content="auto nuevo permiso, permiso provisional auto nuevo, licencia permanente cdmx, permiso guerrero 2026, gestoria vehicular cdmx, gestoria chalco, gestoria interlomas, placas edomex, foreigner driver license mexico, placas para extranjeros mexico, car legalization mexico, english speaking vehicle registry service">
+        content="gestoria vehicular chalco, gestoria vehicular ixtapaluca, gestoria interlomas, gestoria huixquilucan, placas altas bajas edomex, cambio de propietario estado de mexico, placas cdmx, legalizacion de autos, permiso guerrero 2026, licencia permanente cdmx">
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="d2EckAkRF5uJ8I1-9sY4JRgDJ7gYxpGV7pLnztUAxLQ">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
@@ -20,9 +21,10 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Gestoría Vehicular Chalco, Huixquilucan e Interlomas | Permisos y Licencias">
+    <meta property="og:title"
+        content="Gestoría Vehicular EdoMex y CDMX | Placas, Cambio de Propietario | Chalco, Ixtapaluca">
     <meta property="og:description"
-        content="¿Estrenas Auto? Tramita tu Permiso Provisional 2026 y Licencia Permanente sin filas. Gestoría segura en CDMX y EdoMex.">
+        content="Realizamos Alta y Baja de Placas, Cambio de Propietario y Permisos. Servicio en Chalco, Ixtapaluca, Interlomas y todo EdoMex. ¡Sin filas!">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
     <link rel="apple-touch-icon" href="assets/images/logo.jpg">
     <meta name="theme-color" content="#ffffff">
@@ -30,9 +32,9 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/">
-    <meta property="twitter:title" content="Gestoría Vehicular Chalco y Edomex | Placas Sin Filas">
+    <meta property="twitter:title" content="Gestoría Vehicular Chalco, Ixtapaluca y EdoMex | Placas Rápidas">
     <meta property="twitter:description"
-        content="Olvídate de las filas. Gestión experta en Chalco, Huixquilucan e Interlomas. Placas y trámites rápidos y seguros.">
+        content="Expertos en Placas Altas/Bajas y Cambio de Propietario. Atención en Chalco, Ixtapaluca, Interlomas y Huixquilucan.">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
@@ -74,6 +76,7 @@
         "Ciudad de México",
         "Estado de México",
         "Chalco",
+        "Ixtapaluca",
         "Huixquilucan",
         "Interlomas",
         "Morelos",
@@ -88,6 +91,20 @@
         "reviewCount": "127"
       },
       "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Alta y Baja de Placas EdoMex y CDMX"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Cambio de Propietario Estado de México"
+          }
+        },
         {
           "@type": "Offer",
           "itemOffered": {
@@ -164,12 +181,12 @@
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;"><span data-i18n="hero_title_main">Gestoría
                             Vehicular CDMX y Edomex:</span> <br class="hidden-mobile"><span
-                            style="font-weight: 400; font-size: 0.8em;" data-i18n="hero_title_sub">Chalco, Huixquilucan
-                            e Interlomas</span></h1>
-                    <p><strong data-i18n="hero_desc_bold">¿Moto o Auto nuevos?</strong> <span
-                            data-i18n="hero_desc_text">Olvídate de filas y estrés. Somos Expertos en altas, bajas,
-                            legalización y cambios de propietario en la Zona Metropolitana entre otros estados de la
-                            república.</span></p>
+                            style="font-weight: 400; font-size: 0.8em;" data-i18n="hero_title_sub">Chalco, Ixtapaluca,
+                            Huixquilucan e Interlomas</span></h1>
+                    <p><strong data-i18n="hero_desc_bold">¿Trámites Vehiculares?</strong> <span
+                            data-i18n="hero_desc_text">Expertos en <b>Placas Altas y Bajas</b>, <b>Cambio de
+                                Propietario</b> y Legalización en <b>Ixtapaluca, Chalco, Interlomas</b> y toda la Zona
+                            Metropolitana.</span></p>
                     <div class="hero-buttons">
                         <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20con%20un%20trámite"
                             class="btn btn-whatsapp" target="_blank" aria-label="Cotizar trámite por WhatsApp">
@@ -304,6 +321,13 @@
                             <div>
                                 <h4>Cambio de Propietario</h4>
                                 <small>Actualización de titularidad</small>
+                                <ul
+                                    style="margin-top: 0.5rem; font-size: 0.8em; color: #64748b; padding-left: 1.2rem; text-align: left;">
+                                    <li>Identificación Oficial (INE)</li>
+                                    <li>Factura de Origen</li>
+                                    <li>Comprobante de Domicilio</li>
+                                    <li>Tarjeta de Circulación</li>
+                                </ul>
                             </div>
                         </div>
 
