--- a/index.html
+++ b/index.html
@@ -7,117 +7,125 @@
     <title>Gestoría Vehicular EdoMex y CDMX | Placas Altas/Bajas, Cambio Propietario | Chalco, Ixtapaluca, Interlomas
     </title>
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
-    <link rel="alternate icon" href="assets/images/favicon.ico" type="image/x-icon" sizes="any">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Gestor de Autos | Trámites Vehiculares CDMX y EdoMex En Línea</title>
     <meta name="description"
-        content="Gestoría Vehicular en Chalco, Ixtapaluca, Huixquilucan e Interlomas. Expertos en Placas (Altas/Bajas), Cambio de Propietario y Legalización. Trámites rápidos en CDMX y EdoMex.">
-    <meta name="keywords"
-        content="gestoria vehicular chalco, gestoria vehicular ixtapaluca, gestoria interlomas, gestoria huixquilucan, placas altas bajas edomex, cambio de propietario estado de mexico, placas cdmx, legalizacion de autos, permiso guerrero 2026, licencia permanente cdmx">
-    <meta name="robots" content="index, follow">
-    <meta name="google-site-verification" content="d2EckAkRF5uJ8I1-9sY4JRgDJ7gYxpGV7pLnztUAxLQ">
+        content="Trámites vehiculares en línea fácil, rápido y confiable. Gestor de Autos: Placas, Licencias, Cambio de Propietario. Cobertura en EdoMex, CDMX, Chalco, Interlomas. ¡Cotiza por WhatsApp!">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
+    <link rel="alternate icon" href="assets/images/logo.jpg">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title"
-        content="Gestoría Vehicular EdoMex y CDMX | Placas, Cambio de Propietario | Chalco, Ixtapaluca">
+    <meta property="og:title" content="Gestor de Autos | Trámites Vehiculares Rápidos y Seguros">
     <meta property="og:description"
-        content="Realizamos Alta y Baja de Placas, Cambio de Propietario y Permisos. Servicio en Chalco, Ixtapaluca, Interlomas y todo EdoMex. ¡Sin filas!">
+        content="Olvídate de las filas. Gestionamos tus placas, licencias y permisos en CDMX y Estado de México. Servicio 100% online y confiable.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
-    <link rel="apple-touch-icon" href="assets/images/logo.jpg">
-    <meta name="theme-color" content="#ffffff">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/">
-    <meta property="twitter:title" content="Gestoría Vehicular Chalco, Ixtapaluca y EdoMex | Placas Rápidas">
+    <meta property="twitter:title" content="Gestor de Autos | Trámites Vehiculares Rápidos y Seguros">
     <meta property="twitter:description"
-        content="Expertos en Placas Altas/Bajas y Cambio de Propietario. Atención en Chalco, Ixtapaluca, Interlomas y Huixquilucan.">
+        content="Olvídate de las filas. Gestionamos tus placas, licencias y permisos en CDMX y Estado de México. Servicio 100% online y confiable.">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "Gestor de Autos",
-      "image": "https://gestordeautos.com.mx/assets/images/logo.jpg",
-      "@id": "https://gestordeautos.com.mx",
-      "url": "https://gestordeautos.com.mx",
-      "telephone": "+525535757364",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "CDMX",
-        "addressLocality": "Ciudad de México",
-        "postalCode": "06500",
-        "addressCountry": "MX"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 19.4326,
-        "longitude": -99.1332
-      },
-      "openingHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": [
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday"
-        ],
-        "opens": "09:00",
-        "closes": "18:00"
-      },
-      "areaServed": [
-        "Ciudad de México",
-        "Estado de México",
-        "Chalco",
-        "Ixtapaluca",
-        "Huixquilucan",
-        "Interlomas",
-        "Morelos",
-        "Guerrero",
-        "Michoacán",
-        "Oaxaca"
-      ],
-      "priceRange": "$$",
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "5.0",
-        "reviewCount": "127"
-      },
-      "makesOffer": [
+      "@graph": [
         {
-          "@type": "Offer",
-          "itemOffered": {
-            "@type": "Service",
-            "name": "Alta y Baja de Placas EdoMex y CDMX"
+          "@type": "WebSite",
+          "name": "GESTOR DE AUTOS",
+          "alternateName": ["GestoreDeAutos.com.mx", "Gestor de Autos México"],
+          "url": "https://gestordeautos.com.mx",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://gestordeautos.com.mx/?s={search_term_string}",
+            "query-input": "required name=search_term_string"
           }
         },
         {
-          "@type": "Offer",
-          "itemOffered": {
-            "@type": "Service",
-            "name": "Cambio de Propietario Estado de México"
-          }
-        },
-        {
-          "@type": "Offer",
-          "itemOffered": {
-            "@type": "Service",
-            "name": "Licencia Permanente Tipo A CDMX"
-          }
-        },
-        {
-          "@type": "Offer",
-          "itemOffered": {
-            "@type": "Service",
-            "name": "Permiso Provisional de Guerrero 2026"
-          }
+          "@type": "LocalBusiness",
+          "@id": "https://gestordeautos.com.mx",
+          "name": "Gestor de Autos - Trámites Vehiculares CDMX y EdoMex",
+          "image": "https://gestordeautos.com.mx/assets/images/logo.jpg",
+          "telephone": "+525535757364",
+          "url": "https://gestordeautos.com.mx",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "CDMX y Zona Metropolitana",
+            "addressLocality": "Ciudad de México",
+            "addressRegion": "MX-CMX",
+            "postalCode": "06500",
+            "addressCountry": "MX"
+          },
+          "contactPoint": {
+              "@type": "ContactPoint",
+              "telephone": "+525535757364",
+              "contactType": "customer service",
+              "areaServed": ["MX"],
+              "availableLanguage": ["es", "en"],
+              "contactOption": "TollFree"
+          },
+          "sameAs": [
+            "https://wa.me/525535757364"
+          ],
+          "areaServed": [
+            "Ciudad de México",
+            "Estado de México",
+            "Chalco",
+            "Ixtapaluca",
+            "Huixquilucan",
+            "Interlomas",
+            "Morelos",
+            "Guerrero",
+            "Michoacán",
+            "Oaxaca"
+          ],
+          "priceRange": "$$",
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5.0",
+            "reviewCount": "127"
+          },
+          "makesOffer": [
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Alta de Placas (CDMX, EdoMex, Morelos, Guerrero)",
+                    "description": "Trámite de alta de placas para autos particulares, motos, carga y antiguos."
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Licencias de Conducir y Permisos",
+                    "description": "Licencias Tipo A, B, Permanente y permisos provisionales de Guerrero."
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Legalización y REPUVE",
+                    "description": "Regularización de autos extranjeros y registro en REPUVE."
+                }
+            },
+             {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Cambio de Propietario",
+                    "description": "Actualización de titularidad vehicular seguro y rápido."
+                }
+            }
+          ]
         }
       ]
     }
