--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Gestoría Vehicular EdoMex y CDMX | Placas Altas/Bajas, Cambio Propietario | Chalco, Ixtapaluca, Interlomas
     </title>
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
-    <title>Gestor de Autos | Trámites Vehiculares CDMX y EdoMex En Línea</title>
+    <title>Gestoría Vehicular CDMX, EdoMex y Morelos | Online y Sin Filas</title>
     <meta name="description"
-        content="Trámites vehiculares en línea fácil, rápido y confiable. Gestor de Autos: Placas, Licencias, Cambio de Propietario. Cobertura en EdoMex, CDMX, Chalco, Interlomas. ¡Cotiza por WhatsApp!">
+        content="¡Olvídate de las filas y la burocracia! Trámites vehiculares 100% Online. Placas, Licencias y Legalización en CDMX, EdoMex, Morelos y Guerrero. Rápido, Seguro y sin salir de casa.">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
 
     <!-- Favicon -->
@@ -19,17 +19,17 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Gestor de Autos | Trámites Vehiculares Rápidos y Seguros">
+    <meta property="og:title" content="Gestoría Vehicular CDMX y EdoMex | Trámites Online Sin Filas">
     <meta property="og:description"
-        content="Olvídate de las filas. Gestionamos tus placas, licencias y permisos en CDMX y Estado de México. Servicio 100% online y confiable.">
+        content="¿Harto de la burocracia? Gestionamos tus placas y trámites vehiculares 100% en línea. Cobertura: CDMX, EdoMex, Morelos, Guerrero. ¡Cotiza ya!">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/">
-    <meta property="twitter:title" content="Gestor de Autos | Trámites Vehiculares Rápidos y Seguros">
+    <meta property="twitter:title" content="Gestoría Vehicular Online | Sin Filas ni Burocracia">
     <meta property="twitter:description"
-        content="Olvídate de las filas. Gestionamos tus placas, licencias y permisos en CDMX y Estado de México. Servicio 100% online y confiable.">
+        content="Trámites vehiculares seguros y rápidos desde tu casa. Placas, Licencias, Repuve. CDMX, EdoMex, Morelos.">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
@@ -40,7 +40,7 @@
         {
           "@type": "WebSite",
           "name": "GESTOR DE AUTOS",
-          "alternateName": ["GestoreDeAutos.com.mx", "Gestor de Autos México"],
+          "alternateName": ["GestoreDeAutos.com.mx", "Gestor Vehicular Online"],
           "url": "https://gestordeautos.com.mx",
           "potentialAction": {
             "@type": "SearchAction",
@@ -51,13 +51,13 @@
         {
           "@type": "LocalBusiness",
           "@id": "https://gestordeautos.com.mx",
-          "name": "Gestor de Autos - Trámites Vehiculares CDMX y EdoMex",
+          "name": "Gestor de Autos - Trámites Vehiculares Online",
           "image": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "telephone": "+525535757364",
           "url": "https://gestordeautos.com.mx",
           "address": {
             "@type": "PostalAddress",
-            "streetAddress": "CDMX y Zona Metropolitana",
+            "streetAddress": "Servicio a Domicilio y Online",
             "addressLocality": "Ciudad de México",
             "addressRegion": "MX-CMX",
             "postalCode": "06500",
@@ -69,7 +69,7 @@
               "contactType": "customer service",
               "areaServed": ["MX"],
               "availableLanguage": ["es", "en"],
-              "contactOption": "TollFree"
+              "contactOption": ["TollFree", "HearingImpairedSupported"]
           },
           "sameAs": [
             "https://wa.me/525535757364"
@@ -77,52 +77,52 @@
           "areaServed": [
             "Ciudad de México",
             "Estado de México",
-            "Chalco",
-            "Ixtapaluca",
-            "Huixquilucan",
-            "Interlomas",
             "Morelos",
             "Guerrero",
             "Michoacán",
-            "Oaxaca"
+            "Oaxaca",
+            "Chalco",
+            "Ixtapaluca",
+            "Huixquilucan",
+            "Interlomas"
           ],
           "priceRange": "$$",
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
-            "reviewCount": "127"
+            "reviewCount": "153"
           },
           "makesOffer": [
             {
                 "@type": "Offer",
                 "itemOffered": {
                     "@type": "Service",
-                    "name": "Alta de Placas (CDMX, EdoMex, Morelos, Guerrero)",
-                    "description": "Trámite de alta de placas para autos particulares, motos, carga y antiguos."
+                    "name": "Trámites Vehiculares EdoMex",
+                    "description": "Alta de placas, baja, y cambio de propietario en Estado de México sin filas."
                 }
             },
             {
                 "@type": "Offer",
                 "itemOffered": {
                     "@type": "Service",
-                    "name": "Licencias de Conducir y Permisos",
-                    "description": "Licencias Tipo A, B, Permanente y permisos provisionales de Guerrero."
+                    "name": "Gestoría CDMX",
+                    "description": "Licencias permanentes y trámites vehiculares en Ciudad de México."
                 }
             },
             {
                 "@type": "Offer",
                 "itemOffered": {
                     "@type": "Service",
-                    "name": "Legalización y REPUVE",
-                    "description": "Regularización de autos extranjeros y registro en REPUVE."
+                    "name": "Placas Morelos y Guerrero",
+                    "description": "Gestión de placas y permisos provisionales online."
                 }
             },
              {
                 "@type": "Offer",
                 "itemOffered": {
                     "@type": "Service",
-                    "name": "Cambio de Propietario",
-                    "description": "Actualización de titularidad vehicular seguro y rápido."
+                    "name": "Legalización y REPUVE",
+                    "description": "Regularización de autos extranjeros y registro REPUVE garantizado."
                 }
             }
           ]
@@ -130,7 +130,6 @@
       ]
     }
     </script>
-
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
