--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Gestoría Vehicular EdoMex y CDMX | Placas Altas/Bajas, Cambio Propietario | Chalco, Ixtapaluca, Interlomas
     </title>
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
-    <title>Gestoría Vehicular CDMX, EdoMex y Morelos | Online y Sin Filas</title>
+    <title>Trámites Vehiculares Estado de México en Línea | Gestor de Autos</title>
     <meta name="description"
-        content="¡Olvídate de las filas y la burocracia! Trámites vehiculares 100% Online. Placas, Licencias y Legalización en CDMX, EdoMex, Morelos y Guerrero. Rápido, Seguro y sin salir de casa.">
+        content="La forma más fácil de hacer tus trámites vehiculares en Estado de México en línea. Sin filas, 100% online, placas, licencias y cambio de propietario en EdoMex y CDMX.">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
 
     <!-- Favicon -->
@@ -19,17 +19,17 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Gestoría Vehicular CDMX y EdoMex | Trámites Online Sin Filas">
+    <meta property="og:title" content="Trámites Vehiculares Estado de México en Línea | Sin Filas">
     <meta property="og:description"
-        content="¿Harto de la burocracia? Gestionamos tus placas y trámites vehiculares 100% en línea. Cobertura: CDMX, EdoMex, Morelos, Guerrero. ¡Cotiza ya!">
+        content="¿Necesitas placas o licencias? Realiza todos tus trámites del Estado de México en línea con nosotros. Rápido, seguro y sin salir de casa.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/">
-    <meta property="twitter:title" content="Gestoría Vehicular Online | Sin Filas ni Burocracia">
+    <meta property="twitter:title" content="Trámites Vehiculares Estado de México en Línea | Sin Filas">
     <meta property="twitter:description"
-        content="Trámites vehiculares seguros y rápidos desde tu casa. Placas, Licencias, Repuve. CDMX, EdoMex, Morelos.">
+        content="¿Necesitas placas o licencias? Realiza todos tus trámites del Estado de México en línea con nosotros. Rápido, seguro y sin salir de casa.">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
@@ -97,8 +97,8 @@
                 "@type": "Offer",
                 "itemOffered": {
                     "@type": "Service",
-                    "name": "Trámites Vehiculares EdoMex",
-                    "description": "Alta de placas, baja, y cambio de propietario en Estado de México sin filas."
+                    "name": "Alta de Placas Estado de México en Línea",
+                    "description": "Gestionamos el alta de placas del Estado de México en línea sin que tengas que hacer filas."
                 }
             },
             {
@@ -133,11 +133,11 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet"
-        media="print" onload="this.media='all'">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Yellowtail&display=swap"
+        rel="stylesheet" media="print" onload="this.media='all'">
     <noscript>
         <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap">
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Yellowtail&display=swap">
     </noscript>
 
     <!-- Icons -->
@@ -160,7 +160,7 @@
                 </div>
                 <div class="logo-text">
                     <div class="site-title">Gestor de <span>Autos</span></div>
-                    <div class="header-slogan" data-i18n="header_slogan">Gestión vehicular rápida y segura.</div>
+                    <div class="header-slogan" data-i18n="header_slogan">Trámites Estado de México en línea</div>
                 </div>
             </a>
             <ul class="nav-links">
@@ -186,18 +186,22 @@
         <section id="inicio" class="hero">
             <div class="container hero-content">
                 <div class="hero-text">
-                    <h1 style="font-size: 2.5rem; line-height: 1.2;"><span data-i18n="hero_title_main">Gestoría
-                            Vehicular CDMX y Edomex:</span> <br class="hidden-mobile"><span
-                            style="font-weight: 400; font-size: 0.8em;" data-i18n="hero_title_sub">Chalco, Ixtapaluca,
-                            Huixquilucan e Interlomas</span></h1>
-                    <p><strong data-i18n="hero_desc_bold">¿Trámites Vehiculares?</strong> <span
-                            data-i18n="hero_desc_text">Expertos en <b>Placas Altas y Bajas</b>, <b>Cambio de
-                                Propietario</b> y Legalización en <b>Ixtapaluca, Chalco, Interlomas</b> y toda la Zona
-                            Metropolitana.</span></p>
+                    <h1 style="font-size: 2.5rem; line-height: 1.2;">
+                        <span style="font-weight: 800; color: white;">TRÁMITES ESTADO DE MÉXICO EN LÍNEA</span>
+                        <br>
+                        <span
+                            style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000;">
+                            Mejor llama a Gestor de Autos
+                        </span>
+                    </h1>
+                    <p><strong data-i18n="hero_desc_bold">¿Buscas placas o licencias?</strong> <span
+                            data-i18n="hero_desc_text">Somos expertos en <b>Trámites del Estado de México en línea</b>.
+                            Sin filas, sin citas presenciales. Cubrimos <b>EdoMex, CDMX, Chalco e Interlomas</b>.</span>
+                    </p>
                     <div class="hero-buttons">
-                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20con%20un%20trámite"
+                        <a href="https://wa.me/525535757364?text=Hola,%20vengo%20por%20trámites%20online"
                             class="btn btn-whatsapp" target="_blank" aria-label="Cotizar trámite por WhatsApp">
-                            <i class="fab fa-whatsapp"></i> Cotizar por WhatsApp
+                            <i class="fab fa-whatsapp"></i> ¡Tramitar Online Ahora!
                         </a>
                         <a href="#servicios" class="btn btn-primary"
                             style="background-color: transparent; border: 2px solid white;"
@@ -207,8 +211,9 @@
                     </div>
 
                     <div class="hero-trust-text">
-                        <h2 data-i18n="trust_title">¿Por qué elegirnos?</h2>
-                        <p data-i18n="trust_subtitle">Más de 5 años simplificando la vida de los conductores mexicanos.
+                        <h2 data-i18n="trust_title">¿Por qué elegir Gestor de Autos?</h2>
+                        <p data-i18n="trust_subtitle">Líderes en <b>Trámites Estado de México en línea</b> y gestión
+                            vehicular sin complicaciones.
                         </p>
                     </div>
 
@@ -219,20 +224,20 @@
                         </div>
                         <div class="hero-stat-item">
                             <h3 class="counter" data-target="100" data-prefix="" data-suffix="%">0%</h3>
-                            <p data-i18n="text_stat_2">Clientes Satisfechos</p>
+                            <p data-i18n="text_stat_2">Gestión Online</p>
                         </div>
                         <div class="hero-stat-item">
                             <h3 class="counter" data-target="24" data-prefix="" data-suffix="h">0h</h3>
-                            <p data-i18n="text_stat_3">Tiempo Promedio de Respuesta</p>
+                            <p data-i18n="text_stat_3">Respuesta Rápida</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="hero-visual hidden-mobile">
+                <div class="hero-visual">
                     <!-- Overlapping composition -->
-                    <img src="assets/images/moto-deportiva-azul.png"
-                        alt="Gestor de Autos en Moto Deportiva - Trámites Rápidos" class="hero-moto"
-                        fetchpriority="high" width="600" height="400">
+                    <img src="assets/images/hero-coyote.png"
+                        alt="Gestor de Autos - Trámites vehiculares Estado de México en línea con el especialista Nick Wilde"
+                        class="hero-moto" fetchpriority="high" width="900" height="900">
                 </div>
             </div>
             </div>
