--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
                     <img src="assets/images/hero-coyote.png"
                         alt="Gestor de Autos - Trámites vehiculares Estado de México en línea con el especialista Nick Wilde"
                         class="hero-moto" fetchpriority="high" width="900" height="900">
+
+                    <!-- Mobile Animated Overlay -->
+                    <div class="mobile-hero-overlay">
+                        Mejor llama a Gestor de Autos
+                    </div>
                 </div>
             </div>
             </div>
@@ -1021,6 +1026,9 @@
             loading="lazy" decoding="async">
     </div>
 
+    <!-- Friendly Fox pointing to WhatsApp -->
+
+
     <!-- Footer -->
     <footer id="contacto" class="footer">
         <div class="container">
@@ -1442,6 +1450,8 @@
         }
 
     </script>
+    <!-- Number Animation Script -->
+    <script src="script.js"></script>
 </body>
 
 </html>
