--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestoría Vehicular EdoMex y CDMX | Placas Altas/Bajas, Cambio Propietario | Chalco, Ixtapaluca, Interlomas
-    </title>
-    <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
-    <title>Trámites Vehiculares Estado de México en Línea | Gestor de Autos</title>
+    <title>Gestor de Autos | Trámites Vehiculares Estado de México y CDMX en Línea</title>
     <meta name="description"
-        content="La forma más fácil de hacer tus trámites vehiculares en Estado de México en línea. Sin filas, 100% online, placas, licencias y cambio de propietario en EdoMex y CDMX.">
+        content="¡Evita filas! Realiza tus trámites de placas, licencias y cambio de propietario del Estado de México y CDMX 100% en línea. Servicio rápido y seguro en Chalco, Interlomas, Huixquilucan. Consulta gratis.">
+    <meta name="keywords"
+        content="tramites vehiculares estado de mexico, placas edomex, gestoria vehicular cdmx, licencia de conducir estado de mexico, cambio de propietario edomex, reemplacamiento estado de mexico, gestor de autos, chalco, ixtapaluca, interlomas, huixquilucan">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
 
     <!-- Favicon -->
